src/css/styles.css
$transitionTime: 0.4s;

@define-mixin atLarge {
  @media (min-width: 1000px) {
    @mixin-content;
  }
}

@define-mixin atMedium {
  @media (min-width: 800px) {
    @mixin-content;
  }
}

@define-mixin atSmall {
  @media (min-width: 500px) {
    @mixin-content;
  }
}

* {
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
}

body.noscroll {
  /* The .noscroll class is added to <body> when litebox opens, to prevent the document from scrolling */
  overflow: hidden;
}

h1 {
  margin: 0;
  padding: 1rem 0;
}

.container {
  position: relative;
  padding: 1rem;
  width: 100%;
  min-height: 100%;
}

.tinygallery {
  display: flex;
  overflow: hidden;
  flex-wrap: wrap;

  &::after {
    content: '';
    flex-grow: 999999999;
    min-width: 80px;
    height: 0;
  }

  a {
    position: relative;
    display: block;
    height: 90px;
    margin: 2.5px;
    flex-grow: 1;
  }

  img {
    height: 90px;
    object-fit: cover;
    max-width: 100%;
    min-width: 100%;
    vertical-align: bottom;
  }
}

.litebox {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 1);
  z-index: 2;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.2s ease, visibility 1s;

  &__container {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }

  &__image {
    max-width: 100%;
    max-height: 100%;
    /* @mixin atSmall {
      max-width: 90%;
      max-height: 90%;
    } */
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(1.1);
    z-index: 100;
    visibility: visible;
    opacity: 0;
    transition: opacity $transitionTime ease, transform 1.5s ease;
  }

  &__close-btn {
    position: fixed;
    top: 1rem;
    right: 1rem;
    z-index: 100;
    font-size: 1.3rem;
    color: white;
    cursor: pointer;
    transition: opacity $transitionTime ease;
    vertical-align: center;
  }

  &__fullscreen-btn {
    position: fixed;
    top: 1.15rem;
    right: 3rem;
    z-index: 100;
    font-size: 1rem;
    cursor: pointer;
    transition: opacity $transitionTime ease, transform $transitionTime ease;
    color: white;

    &:hover {
      transform: scale(1.15);
    }
  }

  &__image-index {
    position: fixed;
    top: 1rem;
    left: 1rem;
    z-index: 100;
    font-size: 1rem;
    color: white;
    transition: opacity $transitionTime ease;
  }

  &__prev-btn {
    position: fixed;
    top: 50%;
    left: 1rem;
    z-index: 1000;
    width: 1rem;
    height: 1rem;
    border: 1px solid white;
    border-width: 0 0 3px 3px;
    cursor: pointer;
    transform: rotate(45deg) translateY(-50%);
    opacity: 1;
    transition: opacity $transitionTime ease, border-color $transitionTime ease;

    &::after {
      content: '';
      position: absolute;
      top: -200%;
      left: -200%;
      width: 500%;
      height: 500%;
      transform: rotate(45deg);
    }
  }

  &__next-btn {
    position: fixed;
    top: 50%;
    right: 1rem;
    z-index: 1000;
    width: 1rem;
    height: 1rem;
    border: 1px solid white;
    border-width: 0 3px 3px 0;
    cursor: pointer;
    transform: rotate(-45deg) translateY(-50%);
    opacity: 1;
    transition: opacity $transitionTime ease, border-color $transitionTime ease;

    &::after {
      content: '';
      position: absolute;
      top: -200%;
      left: -200%;
      width: 500%;
      height: 500%;
      transform: rotate(45deg);
    }
  }

  &__loader {
    border: 0.3rem solid #555555;
    border-top: 0.3rem solid #ccc;
    border-radius: 50%;
    width: 2rem;
    height: 2rem;
    animation: spin 1.5s linear infinite;
    position: fixed;
    top: 50%;
    left: 50%;
    visibility: hidden;
    opacity: 1;
    transition: opacity $transitionTime ease;
  }

  &__caption {
    position: fixed;
    bottom: 1rem;
    left: 50%;
    width: max-content;
    max-width: 90%;
    transform: translateX(-50%);
    padding: 1rem 1.5rem;
    color: white;
    z-index: 100;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.4);
    border-radius: 5px;
    opacity: 1;
    transition: opacity $transitionTime ease, visibility $transitionTime ease;
  }
}

/* This is the animation for litebox__loader */
@keyframes spin {
  0% {
    transform: translate(-50%, -50%) rotate(0deg);
  }

  100% {
    transform: translate(-50%, -50%) rotate(360deg);
  }
}

